# tetris

./: CMakeLists.txt  Makefile
src/: .game.c.swp  CMakeLists.txt  board.c  board.h  game.c  game.h  main.c  screen.h  shape.c  shape.h  tetris.h
src/shapes/: I.c  L.c  O.c  S.c  T.c
src/test/: CMakeLists.txt  main  test_board.c  test_shape.c
src/test/include/: tetris_test.h
